--- a/style.css
+++ b/style.css
@@ -387,7 +387,7 @@ header {
   .home-content h2 {
     font-size: 25px;
     padding: 0;
-    margin-bottom: 20px;
+    margin-top: 90px;
     width: 100%;
     color: rgb(19, 18, 18);
     text-align: center;
